tests/snapshots/scenarios/037_ppr_prec_weighted_seed_precision_impact-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "ppr_precision",
  "files": [
    "result.json"
  ],
  "scenario_id": "037_ppr_prec_weighted_seed_precision_impact",
  "status": "no_input"
}
