tests/snapshots/scenarios/038_ppr_weight_non_uniform_seed_bias-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "ppr_weighting",
  "files": [
    "result.json"
  ],
  "scenario_id": "038_ppr_weight_non_uniform_seed_bias",
  "status": "validated"
}
