tests/snapshots/scenarios/039_refresh_incremental_update_and_delete-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "refresh",
  "files": [
    "result.json"
  ],
  "scenario_id": "039_refresh_incremental_update_and_delete",
  "status": "validated"
}
