tests/snapshots/scenarios/040_refresh_threshold_modes-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "refresh",
  "files": [
    "result.json"
  ],
  "scenario_id": "040_refresh_threshold_modes",
  "status": "validated"
}
