tests/snapshots/scenarios/043_search_filt_related_accepts_ppr_options-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_filters",
  "files": [
    "result.json"
  ],
  "scenario_id": "043_search_filt_related_accepts_ppr_options",
  "status": "validated"
}
