tests/snapshots/scenarios/044_search_filt_related_with_distance-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_filters",
  "files": [
    "result.json"
  ],
  "scenario_id": "044_search_filt_related_with_distance",
  "status": "validated"
}
