tests/snapshots/scenarios/045_search_filt_temporal_filters_and_sorting-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_filters",
  "files": [
    "result.json"
  ],
  "scenario_id": "045_search_filt_temporal_filters_and_sorting",
  "status": "validated"
}
