tests/snapshots/scenarios/047_search_strat_parse_path_fuzzy-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_match_strategies",
  "files": [
    "result.json"
  ],
  "scenario_id": "047_search_strat_parse_path_fuzzy",
  "status": "no_input"
}
